2006-02-25  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: New file, from gettext-0.14.5.
	* boldquot.sed: New file, from gettext-0.14.5.
	* en@boldquot.header: New file, from gettext-0.14.5.
	* en@quot.header: New file, from gettext-0.14.5.
	* insert-header.sin: New file, from gettext-0.14.5.
	* quot.sed: New file, from gettext-0.14.5.
	* remove-potcdate.sin: New file, from gettext-0.14.5.
	* Rules-quot: New file, from gettext-0.14.5.
	* POTFILES.in: New file.
